--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <li class="nav__item">
                         <a href="#skills" class="nav__link">
-                            <i class="uil uil-file-alt nav-icon"></i>
+                            <i class="uil uil-file-alt nav__icon"></i>
                             Skills
                         </a>
                     </li>
