--- a/index.html
+++ b/index.html
@@ -77,6 +77,40 @@
     <main class="main">
 
         <section class="home section" id="home">
+            <div class="home__container container grid">
+                <div class="home__content grid">
+                    <div class="home__social">
+                        <a href="https://github.com/Alazib" target="_blank" class="home__social-icon">
+                            <i class="uil uil-github-alt"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/j-alberto-azevedo-ibanez/" target="_blank"
+                            class="home__social-icon">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
+                    </div>
+                    <div class="home__img">
+                        <img src="assets/images/J.Alberto Azevedo-Frontend Developer.png">
+                    </div>
+                    <div class="home__data">
+                        <h1 class="home__title">Hi, I am J.Alberto Azevedo</h1>
+                        <h3 class="home__subtitle">Frontend Developer</h3>
+                        <p class="home__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
+                            commodi magni harum quisquam deleniti quasi, quae perspiciatis odio ipsam repudiandae
+                            consequatur optio, nostrum exercitationem. Pariatur delectus quam quibusdam commodi optio.
+                        </p>
+                        <a href="#contact" class="button button--flex">
+                            Contact Me <i class="uil uil-message button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="home__scroll">
+                    <a href="#about" class="home__scroll-button button--flex">
+                        <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+                        <span class="home__scroll-name">Scroll down</span>
+                        <i class="uil uil-arrow-down home__scroll-arrow"></i>
+                    </a>
+                </div>
+            </div>
         </section>
 
         <section class="about section" id="about">
