--- a/index.html
+++ b/index.html
@@ -114,6 +114,40 @@
         </section>
 
         <section class="about section" id="about">
+            <h2 class="section__title">About Me</h2>
+            <span class="section__subtitle">My introduction</span>
+            <div class="about__container container grid">
+                <img src="assets/images/J.Alberto Azevedo-Frontend Developer2.png" alt="" class="about__img">
+                <div class="about__data">
+                    <p class="about__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae commodi
+                        deserunt impedit dicta officiis, possimus ea unde enim?</p>
+                    <div class="about__info">
+                        <div>
+                            <span class="about__info-title">2</span>
+                            <span class="about__info-name">Years <br> experience</span>
+                        </div>
+
+
+                        <div>
+                            <span class="about__info-title">6</span>
+                            <span class="about__info-name">Completed <br> projects</span>
+                        </div>
+
+
+                        <div>
+                            <span class="about__info-title">1</span>
+                            <span class="about__info-name">Companies <br> worked</span>
+                        </div>
+                    </div>
+                    <div class="about__buttons">
+                        <a download="" href="assets/pdf/J.Alberto Azevedo-CV Frontend-en.pdf"
+                            class="button button--flex">
+                            Download CV
+                            <i class="uil uil-airplay button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
