--- a/index.html
+++ b/index.html
@@ -333,6 +333,156 @@
 
 
         <section class="qualification section">
+            <h2 class="section__title">Qualification</h2>
+            <span class="section__subtitle">My personal journey</span>
+
+            <div class="qualification__container container">
+                <div class="qualification__tabs">
+                    <div class="qualification__button button--flex qualification__active" data-target="#education">
+                        <i class="uil uil-graduation-cap qualification__icon"></i>
+                        Education
+                    </div>
+
+                    <div class="qualification__button button--flex" data-target="#work">
+                        <i class="uil uil-briefcase-alt qualification__icon"></i>
+                        Work
+                    </div>
+                </div>
+
+                <div class="qualification__sections">
+
+                    <!-- QUALIFICATION CONTENT 1-->
+                    <div class="qualification__content qualification__active" data-content id="education">
+
+                        <!-- QUALIFICATION 1-->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Bachelor's degree in Biology
+                                </h3>
+                                <span class="qualification__subtitle">Universidad de León, León, Spain</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    September 2006- June 2013
+                                </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!-- QUALIFICATION 2-->
+                        <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">Web Application Development
+                                </h3>
+                                <span class="qualification__subtitle">Private Bootcamp provided by a Product Engineer,
+                                    Valladolid, Spain
+                                </span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    March 2022-December 2022
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- QUALIFICATION 3-->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Master's in Software Programming and Design
+                                </h3>
+                                <span class="qualification__subtitle">EscuelaIT--Universidad Politécnica de Madrid,
+                                    Madrid, Spain
+                                </span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    February 2023-February 2024
+                                </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!-- QUALIFICATION 4-->
+                        <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <!-- <span class="qualification__line"></span> -->
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">Certificate of Higher Education (HNC) in Web
+                                    Application Development
+                                </h3>
+                                <span class="qualification__subtitle">Centro de Estudios Stucom Pelai, Barcelona, Spain
+                                </span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    September 2023-June 2025
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                    <!-- QUALIFICATION CONTENT 2-->
+                    <div class="qualification__content" data-content id="work">
+
+                        <!-- QUALIFICATION 1-->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Work 1
+                                </h3>
+                                <span class="qualification__subtitle">Company XXXX</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    September 2006- June 2013
+                                </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!-- QUALIFICATION 2-->
+                        <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <!-- <span class="qualification__line"></span> -->
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">Work 2
+                                </h3>
+                                <span class="qualification__subtitle">Company YYYYY
+                                </span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    March 2022-December 2022
+                                </div>
+                            </div>
+
+                        </div>
+
+
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
         </section>
 
         <section class="services section" id="services">
