qualification added to nav

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#services" class="nav__link">
-                            <i class="uil uil-briefcase-alt nav__icon"></i>
-                            Services
+                        <a href="#qualification" class="nav__link">
+                            <i class="uil uil-graduation-cap nav__icon"></i>
+                            Qualification
                         </a>
                     </li>
 
@@ -332,7 +332,7 @@
         </section>
 
 
-        <section class="qualification section">
+        <section class="qualification section" id="qualification">
             <h2 class="section__title">Qualification</h2>
             <span class="section__subtitle">My personal journey</span>
 
@@ -485,19 +485,8 @@
             </div>
         </section>
 
-        <section class="services section" id="services">
-        </section>
-
         <section class="portfolio section" id="portfolio">
         </section>
-
-
-        <section class="project section">
-        </section>
-
-        <section class="testimonial section">
-        </section>
-
 
         <section class="contact section" id="contact">
         </section>
