--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>J.Alberto Azevedo Portfolio</title>
 </head>
@@ -351,7 +351,7 @@
 
                 <div class="qualification__sections">
 
-                    <!-- QUALIFICATION CONTENT 1-->
+                    <!-- QUALIFICATION CONTENT: STUDIES-->
                     <div class="qualification__content qualification__active" data-content id="education">
 
                         <!-- QUALIFICATION 1-->
@@ -434,7 +434,7 @@
                     </div>
 
 
-                    <!-- QUALIFICATION CONTENT 2-->
+                    <!-- QUALIFICATION CONTENT: WORK-->
                     <div class="qualification__content" data-content id="work">
 
                         <!-- QUALIFICATION 1-->
@@ -486,7 +486,142 @@
         </section>
 
         <section class="portfolio section" id="portfolio">
+            <h2 class="section__title">Portfolio</h2>
+            <span class="section__subtitle">My projects</span>
+            <span class="section__subtitle stage__title"> <u>FIRST STAGE OF LEARNING</u><br>Bootcamp &
+                self-learning<br /> March
+                2022-December 2022
+            </span>
+            <div class="portfolio__container container swiper">
+                <div class="swiper-wrapper">
+                    <!-- PORTFOLIO 1-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/images/portfolio1.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Modern Website</h3>
+                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit, perspiciatis soluta illo </p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PORTFOLIO 2-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/images/portfolio2.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Ejemplo Nº2</h3>
+                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit, perspiciatis soluta illo </p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+
+                        </div>
+
+
+
+                    </div> <!-- PORTFOLIO 3-->
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/images/portfolio3.jpg" alt="" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Ejemplo Nº3</h3>
+                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit, perspiciatis soluta illo </p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="swiper-button-next">
+                    <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                    <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+            <br></br>
+            <br></br>
+
+            <span class="section__subtitle stage__title"> <u>SECOND STAGE OF LEARNING</u> <br>During my intership at
+                Abastores<br />
+                December 2022-Currently </span>
+            <div class="portfolio__container container swiper">
+                <div class="swiper-wrapper">
+                    <!-- PORTFOLIO 1-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/images/portfolio1.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Modern Website</h3>
+                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit, perspiciatis soluta illo </p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PORTFOLIO 2-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/images/portfolio2.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Ejemplo Nº2</h3>
+                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit, perspiciatis soluta illo </p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+
+                        </div>
+
+
+
+                    </div> <!-- PORTFOLIO 3-->
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/images/portfolio3.jpg" alt="" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Ejemplo Nº3</h3>
+                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit, perspiciatis soluta illo </p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="swiper-button-next">
+                    <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                    <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+
         </section>
+
+
+
 
         <section class="contact section" id="contact">
         </section>
@@ -497,7 +632,7 @@
     </footer>
 
 
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
