--- a/index.html
+++ b/index.html
@@ -488,9 +488,9 @@
         <section class="portfolio section" id="portfolio">
             <h2 class="section__title">Portfolio</h2>
             <span class="section__subtitle">My projects</span>
-            <span class="section__subtitle stage__title"> <u>FIRST STAGE OF LEARNING</u><br>Bootcamp &
-                self-learning<br /> March
-                2022-December 2022
+            <span class="section__subtitle stage__time">
+                <i class="uil uil-calendar-alt"></i> March
+                2022 - December 2022
             </span>
             <div class="portfolio__container container swiper">
                 <div class="swiper-wrapper">
@@ -555,8 +555,7 @@
             <br></br>
             <br></br>
 
-            <span class="section__subtitle stage__title"> <u>SECOND STAGE OF LEARNING</u> <br>During my intership at
-                Abastores<br />
+            <span class="section__subtitle stage__time"> <i class="uil uil-calendar-alt"></i>
                 December 2022-Currently </span>
             <div class="portfolio__container container swiper">
                 <div class="swiper-wrapper">
