--- a/index.html
+++ b/index.html
@@ -651,30 +651,31 @@
 
 
 
-                <form action="" class="contact__form grid">
+                <form class="contact__form grid" id="form">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
-                            <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input">
+                            <label class="contact__label">Name</label>
+                            <input type="text" class="contact__input" name="from_name">
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
-                            <input type="email" class="contact__input">
+                            <input type="email" class="contact__input" name="from_mail">
                         </div>
                     </div>
                     <div class="contact__content">
-                        <label for="" class="contact__label">Project</label>
-                        <input type="text" class="contact__input">
+                        <label for="" class="contact__label">Subject</label>
+                        <input type="text" class="contact__input" name="subject">
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea name="" id="" cols="30" rows="7" class="contact__input"></textarea>
+                        <textarea name="message" id="" cols="30" rows="10" class="contact__input"></textarea>
                     </div>
                     <div>
-                        <a href="#" class="button button--flex">
+                        <!-- <a href="" class="button button--flex">
                             Send Message
                             <i class="uil uil-message button__icon"></i>
-                        </a>
+                        </a> -->
+                        <input type="submit" id="button">
                     </div>
                 </form>
             </div>
@@ -721,7 +722,11 @@
 
 
     <script src="assets/js/swiper-bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script type="text/javascript">
+        emailjs.init('jgI6MFTyMBT2abHYA')
+    </script>
 </body>
 
 </html>
