--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
-                            <input type="email" class="contact__input" name="from_mail">
+                            <input type="email" class="contact__input" name="from_mail" required>
                         </div>
                     </div>
                     <div class="contact__content">
@@ -668,7 +668,7 @@
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea name="message" cols="30" rows="6" class="contact__input"></textarea>
+                        <textarea name="message" cols="30" rows="6" class="contact__input" required></textarea>
                     </div>
 
                     <div class="form__notification">
