Qualification to spanish

--- a/index-en.html
+++ b/index-en.html
@@ -335,19 +335,19 @@
 
 
         <section class="qualification section" id="qualification">
-            <h2 class="section__title">Cualificación</h2>
-            <span class="section__subtitle">Mi camino personal</span>
+            <h2 class="section__title">Qualification</h2>
+            <span class="section__subtitle">My personal journey</span>
 
             <div class="qualification__container container">
                 <div class="qualification__tabs">
                     <div class="qualification__button button--flex qualification__active" data-target="#education">
                         <i class="uil uil-graduation-cap qualification__icon"></i>
-                        Educación
+                        Education
                     </div>
 
                     <div class="qualification__button button--flex" data-target="#work">
                         <i class="uil uil-briefcase-alt qualification__icon"></i>
-                        Trabajo
+                        Work
                     </div>
                 </div>
 
@@ -359,12 +359,12 @@
                         <!-- QUALIFICATION 1-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Técnico Superior en Desarrollo de Aplicaciones Web
+                                <h3 class="qualification__title">Bachelor's degree in Biology
                                 </h3>
-                                <span class="qualification__subtitle">Centro de Estudios Stucom Pelai, Barcelona</span>
+                                <span class="qualification__subtitle">Universidad de León, León, Spain</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    September 2023 - June 2025
+                                    September 2006- June 2013
                                 </div>
                             </div>
                             <div>
@@ -381,15 +381,14 @@
                                 <span class="qualification__line"></span>
                             </div>
                             <div>
-                                <h3 class="qualification__title">Máster de Programación Y Diseño de Software
+                                <h3 class="qualification__title">Web Application Development
                                 </h3>
-                                <span class="qualification__subtitle"> EscuelaIT en colaboración con Universidad
-                                    Politécnica de Madrid,
-                                    Madrid
+                                <span class="qualification__subtitle">Private Bootcamp provided by a Product Engineer,
+                                    Valladolid, Spain
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    February 2023 - February 2024
+                                    March 2022-December 2022
                                 </div>
                             </div>
 
@@ -398,14 +397,14 @@
                         <!-- QUALIFICATION 3-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Bootcamp en Desarrollo de Aplicaciones Web
+                                <h3 class="qualification__title">Master's in Software Programming and Design
                                 </h3>
-                                <span class="qualification__subtitle">Bootcamp privado impartido por un Ingeniero de
-                                    Producto, Madrid
+                                <span class="qualification__subtitle">EscuelaIT--Universidad Politécnica de Madrid,
+                                    Madrid, Spain
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    March 2022 - December 2022
+                                    February 2023-February 2024
                                 </div>
                             </div>
                             <div>
@@ -419,15 +418,17 @@
                             <div></div>
                             <div>
                                 <span class="qualification__rounder"></span>
+                                <!-- <span class="qualification__line"></span> -->
                             </div>
                             <div>
-                                <h3 class="qualification__title">Licenciatura en Biología
+                                <h3 class="qualification__title">Certificate of Higher Education (HNC) in Web
+                                    Application Development
                                 </h3>
-                                <span class="qualification__subtitle">Universidad de León, León
+                                <span class="qualification__subtitle">Centro de Estudios Stucom Pelai, Barcelona, Spain
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    September 2006- June 2013
+                                    September 2023-June 2025
                                 </div>
                             </div>
                         </div>
@@ -441,12 +442,12 @@
                         <!-- QUALIFICATION 1-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Desarrollador de Software
+                                <h3 class="qualification__title">Work 1
                                 </h3>
-                                <span class="qualification__subtitle">Abastores, Madrid. Contrato en prácticas</span>
+                                <span class="qualification__subtitle">Company XXXX</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Diciembre 2022 - Actualidad
+                                    September 2006- June 2013
                                 </div>
                             </div>
                             <div>
@@ -460,38 +461,19 @@
                             <div></div>
                             <div>
                                 <span class="qualification__rounder"></span>
-                                <span class="qualification__line"></span>
-
+                                <!-- <span class="qualification__line"></span> -->
                             </div>
                             <div>
-                                <h3 class="qualification__title">Administrador y Socio Colaborador
+                                <h3 class="qualification__title">Work 2
                                 </h3>
-                                <span class="qualification__subtitle">Target Market Estudios de Mercado S.L, Castilla y
-                                    León
+                                <span class="qualification__subtitle">Company YYYYY
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Junio 2014 - Marzo 2022
+                                    March 2022-December 2022
                                 </div>
                             </div>
 
-                        </div>
-
-                        <!-- QUALIFICATION 3-->
-                        <div class="qualification__data">
-                            <div>
-                                <h3 class="qualification__title">Docente - Tutor Privado
-                                </h3>
-                                <span class="qualification__subtitle">Autónomo, Castilla y León, Comunidad
-                                    Valenciana</span>
-                                <div class="qualification__calendar">
-                                    <i class="uil uil-calendar-alt"></i>
-                                    Diciembre 2013 - Actualidad
-                                </div>
-                            </div>
-                            <div>
-                                <span class="qualification__rounder"></span>
-                            </div>
                         </div>
 
 
