--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                                     Valenciana</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Diciembre 2013 - Actualidad
+                                    Diciembre 2013 - Marzo 2019
                                 </div>
                             </div>
                             <div>
