projects spanish WIP

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header" id="header">
         <nav class="nav container">
 
-            <a href="#" class="nav__logo">J.Alberto</a>
+            <a href="#" class="nav__logo">J.Alberto Azevedo</a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
@@ -23,28 +23,28 @@
                     <li class="nav__item">
                         <a href="#home" class="nav__link">
                             <i class="uil uil-home nav__icon"></i>
-                            Home
+                            Inicio
                         </a>
                     </li>
 
                     <li class="nav__item">
                         <a href="#about" class="nav__link">
                             <i class="uil uil-user nav__icon"></i>
-                            About
+                            Sobre mí
                         </a>
                     </li>
 
                     <li class="nav__item">
                         <a href="#skills" class="nav__link">
                             <i class="uil uil-file-alt nav__icon"></i>
-                            Skills
+                            Destrezas
                         </a>
                     </li>
 
                     <li class="nav__item">
                         <a href="#qualification" class="nav__link">
                             <i class="uil uil-graduation-cap nav__icon"></i>
-                            Qualification
+                            Cualificación
                         </a>
                     </li>
 
@@ -58,7 +58,7 @@
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">
                             <i class="uil uil-message nav__icon"></i>
-                            Contact
+                            Contacto
                         </a>
                     </li>
                 </ul>
@@ -74,7 +74,6 @@
             </div>
         </nav>
     </header>
-
 
     <main class="main">
 
@@ -94,14 +93,12 @@
                         <img src="assets/images/J.Alberto Azevedo-Frontend Developer.png">
                     </div>
                     <div class="home__data">
-                        <h1 class="home__title">Hi, I am J.Alberto Azevedo</h1>
-                        <h3 class="home__subtitle">Frontend Developer</h3>
-                        <p class="home__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
-                            commodi magni harum quisquam deleniti quasi, quae perspiciatis odio ipsam repudiandae
-                            consequatur optio, nostrum exercitationem. Pariatur delectus quam quibusdam commodi optio.
+                        <h1 class="home__title">J.Alberto Azevedo</h1>
+                        <h3 class="home__subtitle">Desarrollador de Software</h3>
+                        <p class="home__description">Especializado en JavaScript y su entorno.
                         </p>
                         <a href="#contact" class="button button--flex">
-                            Contact Me <i class="uil uil-message button__icon"></i>
+                            Contáctame <i class="uil uil-message button__icon"></i>
                         </a>
                     </div>
                 </div>
@@ -499,18 +496,14 @@
                     </div>
 
                 </div>
-
-
-
             </div>
         </section>
 
         <section class="portfolio section" id="portfolio">
             <h2 class="section__title">Portfolio</h2>
-            <span class="section__subtitle">My projects</span>
+            <span class="section__subtitle">Mis proyectos</span>
             <span class="section__subtitle stage__time">
-                <i class="uil uil-calendar-alt"></i> March
-                2022 - December 2022
+                <i class="uil uil-calendar-alt"></i> Diciembre 2022 - Actualidad
             </span>
             <div class="portfolio__container container swiper">
                 <div class="swiper-wrapper">
@@ -519,9 +512,10 @@
                         <img src="assets/images/portfolio1.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Modern Website</h3>
-                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                Sit, perspiciatis soluta illo </p>
+                            <h3 class="portfolio__title">App full stack para comunicación a distancia
+                                mediante videollamadas y chat. </h3>
+                            <p class="portfolio__description">Vue, Quasar, TypeScript, Node.js, Expresss,
+                                MongoDB Atlas, Mongoose, JSON Web Token, Postman, Studio 3T.</p>
                             <a href="#" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -531,29 +525,27 @@
 
                     <!-- PORTFOLIO 2-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/images/portfolio2.jpg" alt="" class="portfolio__img">
+
+                        <img src="assets/images/project-Abastores.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Ejemplo Nº2</h3>
-                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                Sit, perspiciatis soluta illo </p>
+                            <h3 class="portfolio__title">Abastores, la primera lonja online de materias primas.</h3>
+                            <p class="portfolio__description">Vue, Quasar, TypeScript, Python, Django, Cypress, Docker,
+                                Storybook. Metodología Agile. </p>
                             <a href="#" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
-
                         </div>
+                    </div>
 
-
-
-                    </div> <!-- PORTFOLIO 3-->
-
+                    <!-- PORTFOLIO 3-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/images/portfolio3.jpg" alt="" class="portfolio__img">
+                        <img src="assets/images/project-portfolio.png" alt="" class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Ejemplo Nº3</h3>
-                            <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                Sit, perspiciatis soluta illo </p>
+                            <h3 class="portfolio__title">Porfolio personal</h3>
+                            <p class="portfolio__description">HTML, JavaScript Vanilla, CSS, SwiperJS, EmailJS,
+                                Iconscout. </p>
                             <a href="#" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -576,7 +568,7 @@
             <br></br>
 
             <span class="section__subtitle stage__time"> <i class="uil uil-calendar-alt"></i>
-                December 2022 - Currently </span>
+                March 2022 - December 2022</span>
             <div class="portfolio__container container swiper">
                 <div class="swiper-wrapper">
                     <!-- PORTFOLIO 1-->
